[package]
name = "github-profile"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = ">=0.11", features = ["json", "brotli"] }
tokio = {version = ">=1.9", features = ["rt", "macros"]}
serde_json = ">=1.0"
